@@ -56,21 +56,11 @@ class Smarty_Internal_Compile_Private_Special_Variable extends Smarty_Internal_C
                 break;
 
             case 'template':
-                if ($compiler->smarty->inheritance) {
-                	$ptr = $compiler->template->parent;
-                } else {
-                	$ptr = $compiler->template;
-                }
-                $_template_name = $ptr->template_resource;
+                $_template_name = $compiler->template->template_resource;
                 return "'$_template_name'";
 
             case 'current_dir':
-                if ($compiler->smarty->inheritance) {
-                	$ptr = $compiler->template->parent;
-                } else {
-                	$ptr = $compiler->template;
-                }
-                $_template_dir_name = dirname($ptr->getTemplateFilepath());
+                $_template_dir_name = dirname($compiler->template->getTemplateFilepath());
                 return "'$_template_dir_name'";
 
             case 'version':
